[package]
name = "gpu-allocator"
version = "0.7.0"
authors = ["Traverse Research <opensource@traverseresearch.nl>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Memory allocator for GPU memory in Vulkan and in the future DirectX 12"
categories = ["rendering", "rendering::graphics-api"]
homepage = "https://github.com/Traverse-Research/gpu-allocator"
repository = "https://github.com/Traverse-Research/gpu-allocator"
keywords = ["vulkan", "memory", "allocator"]
documentation = "https://docs.rs/gpu-allocator/"

include = [
    "src/**",
    "Cargo.toml",
]

[dependencies]
ash = "0.32"
backtrace = "0.3"
log = "0.4"
thiserror = "1.0"
imgui = { version = "0.6", optional = true }
winapi = { git = "https://github.com/Traverse-Research/winapi-rs.git", rev = "b30c725", features = ["windef", "winuser", "libloaderapi", "dxgi1_6", "dxgi1_5", "dxgi1_4", "dxgi1_3", "dxgi1_2", "dxgi", "dxgiformat", "dxgitype", "d3d12", "d3dcommon", "d3d12sdklayers", "errhandlingapi", "debugapi", "d3dcompiler", "consoleapi", "processenv", "winbase", "winerror", "impl-default", "impl-debug"] }

[dev-dependencies]
ash-window = "0.6"
winit = "0.23"


[[example]]
name = "vulkan-buffer"
path = "examples/vulkan-buffer/src/main.rs"

[[example]]
name = "vulkan-visualization"
path = "examples/vulkan-visualization/src/main.rs"
required-features = ["visualizer"]


[features]
vulkan_device_address = []
visualizer = [ "imgui" ]
