[package]
name = "gpu-allocator"
version = "0.7.0"
authors = ["Traverse Research <opensource@traverseresearch.nl>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Memory allocator for GPU memory in Vulkan and in the future DirectX 12"
categories = ["rendering", "rendering::graphics-api"]
homepage = "https://github.com/Traverse-Research/gpu-allocator"
repository = "https://github.com/Traverse-Research/gpu-allocator"
keywords = ["vulkan", "memory", "allocator"]
documentation = "https://docs.rs/gpu-allocator/"

include = [
    "src/**",
    "Cargo.toml",
]

[dependencies]
ash = { git = "https://github.com/MaikKlein/ash.git", rev = "a75d8e7e889bd75ac08f226539c04c7848823fcc" }
backtrace = "0.3"
log = "0.4"
thiserror = "1.0"
imgui = { version = "0.7", optional = true }

[dev-dependencies]
ash-window = { git = "https://github.com/MaikKlein/ash.git", rev = "a75d8e7e889bd75ac08f226539c04c7848823fcc" }
winit = "0.25"

[[example]]
name = "vulkan-buffer"
path = "examples/vulkan-buffer/src/main.rs"

[[example]]
name = "vulkan-visualization"
path = "examples/vulkan-visualization/src/main.rs"
required-features = ["visualizer"]


[features]
visualizer = [ "imgui" ]
